# Blog-web-app

./: LICENSE  Readme.md  db.sqlite3  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html
django_learn/: asgi.py  settings.py  urls.py  wsgi.py
